[fix] add missing colours

--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -103,6 +103,10 @@
         background-color: #3C1362;
       }
 
+      .color-dusty-pink {
+        background-color: #dd83b9;
+      }
+
       .color-emerald-green {
         background-color: #1B9975;
       }
@@ -344,6 +348,10 @@
 
       .color-turquoise {
         background-color: #7deee5;
+      }
+
+      .color-vibrant-purple {
+        background-color: #9f6ba9;
       }
 
       .color-watermelon {
